--- a/home-service-app/package.json
+++ b/home-service-app/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.8",
+    "axios": "^1.9.0",
     "firebase": "^11.8.1",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.8"
   },
