--- a/home-service-app/package.json
+++ b/home-service-app/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "firebase": "^11.8.1",
+    "framer-motion": "^12.16.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
